--- a/src/playerCounters/playerCounter/PlayerCounter.css
+++ b/src/playerCounters/playerCounter/PlayerCounter.css
@@ -37,10 +37,10 @@
   color: ForestGreen;
 }
 .middleLife {
-  color: #F48200;
+  color: #f48200;
 }
 .lowLife {
-  color: red
+  color: red;
 }
 .maxMastery {
   background: linear-gradient(0deg, orange, LightYellow);
@@ -49,15 +49,11 @@
   -webkit-text-stroke: 2px darkorange;
 }
 .highMastery {
-  color:#FFB800;
+  color: #ffb800;
 }
 .middleMastery {
   color: darkorange;
 }
 .lowMastery {
   color: #000;
-}
-
-.crossbones {
-  font-weight: bolder;
 }
