--- a/src/playerCounters/playerCounter/PlayerCounter.css
+++ b/src/playerCounters/playerCounter/PlayerCounter.css
@@ -1,5 +1,6 @@
 .Counter {
-  width: 100%;
+  width: 80%;
+  max-width: 80%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -9,6 +10,7 @@
   background-size: contain;
   background-repeat: no-repeat;
   margin: 1rem;
+  height: 100%;
 }
 
 .PlayerLife {
